<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".postCreation.PostCreationFragment"
    android:id="@+id/postCreationFragment" >

    <org.pixeldroid.app.postCreation.carousel.ImageCarousel
        android:id="@+id/carousel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        app:showCaption="true" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backbutton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@android:string/cancel"
            android:src="?attr/homeAsUpIndicator"
            android:tooltipText='@android:string/cancel'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleStoryPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedButton="@+id/buttonPost"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/post_creation_next_button"
            app:layout_constraintStart_toEndOf="@id/backbutton"
            app:layout_constraintTop_toTopOf="parent"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/buttonStory"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_story" />

            <Button
                android:id="@+id/buttonPost"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_post" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <Button
            style="@style/Widget.Material3.Button.TextButton.Icon"
            app:icon="@drawable/arrow_forward"
            app:iconGravity="end"
            android:id="@+id/post_creation_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/continue_post_creation"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbarPostCreation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#40000000"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/savePhotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/save_to_gallery"
            android:src="@drawable/download_file_30dp"
            android:tooltipText='@string/save_to_gallery'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/removePhotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete"
            android:src="@drawable/delete_30dp"
            android:tooltipText='@string/delete'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/savePhotoButton"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/editPhotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/edit"
            android:src="@drawable/ic_baseline_edit_30"
            android:tooltipText='@string/edit'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/removePhotoButton"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/addPhotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/add_photo"
            android:src="@drawable/add_photo_button"
            android:tooltipText='@string/add_photo'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>